# booth-license-checker

./: .gitignore  CLAUDE.md  LICENSE  README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js  vn3-options.js  warning.css
.github/workflows/: package.yml
lib/: link-extractor.js
viewer/: .gitignore  README.md  package-lock.json  package.json
viewer/server/: Cargo.toml
viewer/server/migrations/: 0001_init.sql
viewer/server/src/: auth.rs  config.rs  db.rs  main.rs  models.rs  static_files.rs
viewer/server/src/handlers/: analyses.rs  export.rs  manual.rs  mod.rs  products.rs
viewer/web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
viewer/web/src/: App.tsx  index.css  main.tsx
viewer/web/src/components/: ConditionTable.tsx  Layout.tsx  PdfDropzone.tsx  ThemeToggle.tsx
viewer/web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Empty.tsx  Input.tsx
viewer/web/src/lib/: api.ts  format.ts  local-settings.ts  pdf.ts  theme.ts
viewer/web/src/parsing/: SYNC_NOTE.md  vn3-options.ts  vn3-parser.ts
viewer/web/src/routes/: Dashboard.tsx  ManualRegister.tsx  ProductDetail.tsx  ProductList.tsx  Settings.tsx
